fix too much point

--- a/app/assets/stylesheets/Dashboard-add.css
+++ b/app/assets/stylesheets/Dashboard-add.css
@@ -225,6 +225,7 @@
     padding:12px 0 0 25px
 }
 .left-content-title[name='dashboard-add']{
+    background-color:#F7F7F7;
     box-shadow:0px 2px 3px rgba(0,0,0,0.3);
     -moz-box-shadow:0px 2px 3px rgba(0,0,0,0.3);
     -webkit-box-shadow:0px 2px 3px rgba(0,0,0,0.3);
